# TetrAMMInterface

./: .gitignore  CMakeLists.txt
include/: GraphiteConnector.h  GraphiteReporter.h  TetrAMMInterface.h
src/: GraphiteConnector.cpp  GraphiteReporter.cpp  TetrAMMInterface.cc  main.cc
